--- a/Per.css
+++ b/Per.css
@@ -39,7 +39,7 @@ header{
     }
     p{
         font-size: 20px;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      font-family:cursive
       
     }
     p:hover{
@@ -59,5 +59,16 @@ header{
         padding: 0;
         box-sizing: border-box; 
      }
+    h1{
+        text-align: center;
+        font-size: 50px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    h2{
+        font-size: 30px;
+    }
+img{
+    margin: 10px;
+    display: flex;
     
-    
+}
