--- a/css sobre/sobre.css
+++ b/css sobre/sobre.css
@@ -60,3 +60,11 @@ header{
     h3:hover{
 color: deeppink;
     }
+    h1{
+      text-align: center;
+      font-size: 50px;
+      font-family:sans-serif ;
+    }
+    p{
+      font-family:cursive;
+    }
