--- a/Bonus.css
+++ b/Bonus.css
@@ -30,14 +30,15 @@ header{
        padding: 10px;
     }
     h1{
-        color: rgba(186, 226, 43, 0.349);
-        font-size: 46px;
+        color: rgba(176, 194, 110, 0.349);
+        font-size: 56px;
+        text-align: center;
     }
     body{
        background-image: url(./img/capa\ de\ fundo\ 2.jpg);
     }
     p{
-        font-size: 20px;
+        font-size: 30px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       
     }
@@ -58,4 +59,6 @@ header{
         padding: 0;
         box-sizing: border-box; 
      }
+
+        
     
