--- a/css/Cor.css
+++ b/css/Cor.css
@@ -7,7 +7,7 @@
  header{
  
  
- width: 100vw;
+ width: 105vw;
  height: 90px;
  display: flex;
  justify-content: baseline;
@@ -19,7 +19,7 @@
  list-style: none;
  text-decoration: none;
  font-size: 20px;
- margin: 80px;
+ margin: 65px;
  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  
  }
@@ -59,7 +59,12 @@ h1:hover{
 
  align-items: center;
   }
-  
+  #Rede{
+width: 690px;
+  }
+  #git{
+    width: 690px;
+  }
   
     
   
