--- a/Per.css
+++ b/Per.css
@@ -1,7 +1,7 @@
 header{
  
-    width: 100vw;
-    height: 80px;
+    width: 105vw;
+    height: 90px;
     display: flex;
     justify-content: baseline;
     background-color:rgb(240, 232, 232);
@@ -10,8 +10,8 @@ header{
     li{
     list-style: none;
     text-decoration: none;
-    font-size: 20px;
-    margin: 80px;
+    font-size: 23px;
+    margin: 65px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     
     }
@@ -72,3 +72,8 @@ img{
     display: flex;
     
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+ }
